--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ body {
 nav ul, footer ul {
     text-align: center;
     padding-bottom: 20px;
-    color: #4B0082;
+    color: #8F5E99;
 }
 
 nav ul li, footer ul li {
@@ -43,17 +43,17 @@ nav ul li, footer ul li {
 a {
     text-decoration: none;
     font-weight: 300
-    color: #4B0082; // indigo
+    color: #8F5E99; // indigo
 }
 
 a:hover {
     opacity:0.8;
-    color: #4B0082; // indigo
+    color: #8F5E99; // indigo
 }
 
 a:visited {
     text-decoration: none;
-    color: #4B0082; // indigo
+    color: #8F5E99; // indigo
 }
 
 p {
