fix list formatting

--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,12 @@ svg {
   color-fill: #4B0082;
 }
 
+ul, li, a {
+    font-family: ibm-plex-sans, sans-serif;
+    font-weight: 300;
+    color: #000000;
+}
+
 footer {
     margin-top: 50px;
     text-align: right;
