center table headers

--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ th, td {
 th {
     font-weight: 400;
     color: #8F5E99;
-    text-align: left;
+    text-align: center;
 }
 td {
     font-weight: lighter;
