--- a/css/main.css
+++ b/css/main.css
@@ -1,46 +1,46 @@
 .main_image {
-  float: left;
-  margin-top:0px;
-  margin-right: 40px;
-  margin-left: 0px;
-  margin-bottom: 10px;
-  text-align: center;
-  font-size: 0.8em;
-  font-style: italic;
-  border-radius: 50%;
-  width: 350px;
-  height: 350px;
+    float: left;
+    margin-top: 0px;
+    margin-right: 40px;
+    margin-left: 0px;
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 0.8em;
+    font-style: italic;
+    border-radius: 50%;
+    width: 350px;
+    height: 350px;
 }
 
 .poem_vert_image {
-  margin-top:0px;
-  margin-right: 40px;
-  margin-left: 0px;
-  margin-bottom: 0px;
-  text-align: center;
-  font-size: 0.8em;
-  font-style: italic;
-  width: 200px;
-  height: 250px;
+    margin-top: 0px;
+    margin-right: 40px;
+    margin-left: 0px;
+    margin-bottom: 0px;
+    text-align: center;
+    font-size: 0.8em;
+    font-style: italic;
+    width: 200px;
+    height: 250px;
 }
 
 
 .poem_hori_image {
-  margin-top:0px;
-  margin-right: 40px;
-  margin-left: 0px;
-  margin-bottom: 0px;
-  text-align: center;
-  font-size: 0.8em;
-  font-style: italic;
-  width: 250px;
-  height: 200px;
+    margin-top: 0px;
+    margin-right: 40px;
+    margin-left: 0px;
+    margin-bottom: 0px;
+    text-align: center;
+    font-size: 0.8em;
+    font-style: italic;
+    width: 250px;
+    height: 200px;
 }
 
 .icon {
-  margin-left: 10px;
-  display:inline;
-  color-fill: #4B0082;
+    margin-left: 10px;
+    display: inline;
+    color-fill: #4B0082;
 }
 
 h1 {
@@ -89,7 +89,7 @@ a:link {
 }
 
 a:hover {
-    opacity:0.8;
+    opacity: 0.8;
     color: #8F5E99;
 }
 
@@ -115,12 +115,14 @@ object {
 }
 
 svg {
-  margin-left: 10px;
-  display:inline;
-  color-fill: #4B0082;
+    margin-left: 10px;
+    display: inline;
+    color-fill: #4B0082;
 }
 
-ul, li, a {
+ul,
+li,
+a {
     font-family: ibm-plex-sans, sans-serif;
     font-weight: 300;
     color: #000000;
@@ -136,7 +138,8 @@ blockquote {
     padding-left: 15px;
 }
 
-th, td {
+th,
+td {
     font-family: ibm-plex-sans, sans-serif;
     white-space: nowrap;
     text-align: left;
@@ -146,6 +149,7 @@ th {
     font-weight: 400;
     color: #8F5E99;
 }
+
 td {
     font-weight: lighter;
 }
@@ -157,15 +161,17 @@ footer {
     font-style: normal;
     font-size: .8em;
     color: #999999;
-    font-weight:lighter;
+    font-weight: lighter;
 }
 
-nav ul, footer ul {
+nav ul,
+footer ul {
     text-align: center;
     padding-bottom: 20px;
 }
 
-nav ul li, footer ul li {
+nav ul li,
+footer ul li {
     font-family: ibm-plex-sans-thin, sans-serif;
     font-style: normal;
     display: inline;
