adding urdu original

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@
 }
 
 .poem_vert_image {
-    margin-top: 0px;
+    display: inline-block;
     margin-right: 40px;
     margin-left: 0px;
     margin-bottom: 0px;
@@ -25,7 +25,21 @@
 }
 
 
+.poem_vert_large_image {
+    margin-top: 0px;
+    margin-right: 40px;
+    margin-left: 0px;
+    margin-bottom: 0px;
+    text-align: center;
+    font-size: 0.8em;
+    font-style: italic;
+    width: 300px;
+    height: 450px;
+}
+
+
 .poem_hori_image {
+    display: inline-block;
     margin-top: 0px;
     margin-right: 40px;
     margin-left: 0px;
